# worshop_3

./: .gitignore  PyTorch-Basics-1.ipynb  PyTorch-Basics-2.ipynb  PyTorch-Basics-Exercise.ipynb  Regular-Expressions-Basics.ipynb  Text-Classification-HuggingFace.ipynb  Text-Classification-RNN.ipynb  Text-Preprocessing.ipynb  main.py  pyproject.toml  requirements.txt
