[project]
name = "worshop-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==4.0.0",
    "emoji==1.4.1",
    "evaluate==0.4.0",
    "matplotlib==3.8.4",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.0",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "torch>=2.10.0",
    "torchmetrics==1.3.2",
    "torchvision>=0.25.0",
    "transformers==4.41.1",
]
